# QmioErrorAnalysis

./: .gitignore
fakeqmio_analysis/: FakeQmioAnalysis.ipynb
qmio_analysis/: QA1_initial_test.ipynb  QA2_high_period.ipynb  QA3_low_period_40.ipynb  QA4_low_period_20.ipynb  QA5_low_period_40_check.ipynb  QA6_low_period_20_check.ipynb  QA7_low_period_15.ipynb  QmioAnalysis.ipynb  QmioAnalysis_16qubits.ipynb  QmioAnalysis_32_high_period.ipynb  QmioAnalysis_32_low_period.ipynb  QmioAnalysis_6qubits.ipynb
qmioanalyzer-package/: LICENSE  README.md  pyproject.toml  setup.cfg
qmioanalyzer-package/src/qmioanalyzer/: __init__.py  error_analyzer.py  error_visualizer.py  utils.py
qmioanalyzer-package/src/qmioanalyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
