[metadata]
name = qmioanalyzer
version = 0.0.1
author = Carolina Filgueira
author_email = carolinafilgueira@outlook.es
description = Tools to analyze errors in Qmio quantum compute
long_description = file:README.md
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.11
    Operating system :: MacOS :: MacOS X

[options]
packages = find:
package_dir = =src
python_requires = >=3.9
install_requires =
    numpy>=1.24.3
    matplotlib>=3.7.1


zip_safe = no

[options.packages.find]
where = src

